--- a/src/ProtonDrive.App.Windows/Resources/Strings.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.resx
@@ -129,6 +129,9 @@
   <data name="Main_Sidebar_NavigationMenu_Item_Photos" xml:space="preserve">
     <value>Photos</value>
   </data>
+  <data name="Main_Sidebar_NavigationMenu_Item_PhotosImport" xml:space="preserve">
+    <value>Photos import</value>
+  </data>
   <data name="Main_Sidebar_NavigationMenu_Item_Photos_HelpText" xml:space="preserve">
     <value>Menu item: Photos</value>
   </data>
@@ -680,8 +683,23 @@ disable storage optimization at any time.</value>
   <data name="Main_Photos_Folders_Items_Label" xml:space="preserve">
     <value>item(s)</value>
   </data>
+  <data name="PhotoImportErrorCode_Value_Unknown" xml:space="preserve">
+    <value>Import failed. Try again.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_AlbumDoesNotExist" xml:space="preserve">
+    <value>Import failed. The album does not exist.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_MaximumNumberOfAlbumsReached" xml:space="preserve">
+    <value>Import failed. Maximum number of albums reached.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_MaximumNumberOfPhotosPerAlbumReached" xml:space="preserve">
+    <value>Import failed. Maximum number of photos per album reached.</value>
+  </data>
   <data name="Main_Photos_Folders_Error_ImportFailed" xml:space="preserve">
     <value>Import failed. Try removing the folder and importing it again. If the issue persists, please contact support.</value>
+  </data>
+  <data name="Main_Photos_Folders_WaitingToImport" xml:space="preserve">
+    <value>Waiting to import...</value>
   </data>
   <data name="Main_Photos_Folders_ImportingItemsFormat" xml:space="preserve">
     <value>Importing... {0} of {1}</value>
@@ -719,6 +737,10 @@ disable storage optimization at any time.</value>
   </data>
   <data name="Main_Photos_Folders_Menu_Item_OpenFolder" xml:space="preserve">
     <value>_Open folder</value>
+    <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
+  </data>
+  <data name="Main_Photos_Folders_Menu_Item_Retry" xml:space="preserve">
+    <value>_Retry</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="Main_Photos_ImportFromGoogle_Title" xml:space="preserve">
@@ -1007,6 +1029,9 @@ disable storage optimization at any time.</value>
   </data>
   <data name="MappingErrorCode_Value_PhotosNotReady" xml:space="preserve">
     <value>Photos feature not ready</value>
+  </data>
+  <data name="MappingErrorCode_Value_PhotoImportFailed" xml:space="preserve">
+    <value>Photo import failed</value>
   </data>
   <data name="MappingErrorCode_Value_RemoteSharedWithMeItemDoesNotExist" xml:space="preserve">
     <value>Can’t access shared Proton Drive file or folder. Check if it is still shared with you.</value>
