--- a/src/ProtonDrive.App.Windows/Resources/Strings.tr.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.tr.resx
@@ -786,10 +786,10 @@ Geri yüklemek ve bu hatayı gidermek için eşitlemeyi kapatıp yeniden açın.
     <value>Klasörler ekle</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_FolderIncludedByAnAlreadySyncedFolderFormat">
-    <value>Zaten Proton Drive ile eşitlenen bir klasörün içinde bulunduğundan {0} klasör eşitlenemedi</value>
+    <value>{0} klasör zaten Proton Drive ile eşitlenen bir klasörün içinde bulunduğundan eşitlenemedi</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_FolderIncludesAnAlreadySyncedFolderFormat">
-    <value>Zaten Proton Drive ile eşitlenen bir alt klasörü bulunduğundan {0} klasör eşitlenemedi</value>
+    <value>{0} klasör zaten Proton Drive ile eşitlenen bir alt klasörü bulunduğundan eşitlenemedi</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_LocalFileSystemAccessFailedFormat">
     <value>{0} klasöre erişilemedi</value>
@@ -798,7 +798,7 @@ Geri yüklemek ve bu hatayı gidermek için eşitlemeyi kapatıp yeniden açın.
     <value>{0} klasör bulunamadı veya açılamadı</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_LocalVolumeNotSupportedFormat">
-    <value>Desteklenmeyen bir sürücüde bulunduğundan {0} klasör eşitlenemedi</value>
+    <value>{0} klasör desteklenmeyen bir sürücüde bulunduğundan eşitlenemedi</value>
   </data>
   <data name="Main_MyComputer_Folders_AddFolders_ValidationError_NetworkFolderNotSupportedFormat">
     <value>Ağ klasörleri desteklenmediğinden {0} klasör eşitlenemedi</value>
@@ -874,7 +874,7 @@ Dosyaların bu aygıtta yalnızca onları açtığınızda ya da her zaman bulun
     <value>Klasör kaldırılsın mı?</value>
   </data>
   <data name="Main_MyComputer_Folders_StorageOptimizationTurnedOffNotification_Message_1">
-    <value>“{0}” klasöründeki dosyalar artık her zaman aygıt üzerinde tutulacak. Tüm dosyaların indirilmesi birkaç dakika sürebilir (Dosya Gezgini üzerinden durumu kontrol edebilirsiniz).</value>
+    <value>“{0}” klasöründeki dosyalar artık her zaman aygıtınız üzerinde tutulacak. Tüm dosyaların indirilmesi birkaç dakika sürebilir (Durumu Dosya Gezgini üzerinden denetleyebilirsiniz).</value>
     <comment>Placeholder {0}: folder name</comment>
   </data>
   <data name="Main_MyComputer_Folders_StorageOptimizationTurnedOffNotification_Message_2">
@@ -930,56 +930,80 @@ Dosyaların bu aygıtta yalnızca onları açtığınızda ya da her zaman bulun
   <data name="Main_MyComputer_Title">
     <value>Bilgisayarım</value>
   </data>
+  <data name="Main_Photos_Folders_Error_ImportFailed">
+    <value>İçe aktarım tamamlanamadı. Klasörü kaldırıp yeniden içe aktarmayı deneyin. Sorun sürerse destek ekibimizle görüşün.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_Unknown">
+    <value>İçe aktarılamadı. Yeniden deneyin.</value>
+  </data>
   <data name="Main_Photos_Folders_ImportedItemsFormat">
-    <value>Imported {0} of {1} items</value>
+    <value>{0} / {1} içe aktarıldı.</value>
+  </data>
+  <data name="Main_Photos_Folders_ImportingItemsFormat">
+    <value>İçe aktarılıyor... {0} / {1}</value>
   </data>
   <data name="Main_Photos_Folders_Items_Label">
-    <value>item(s)</value>
+    <value>öge(ler)</value>
+  </data>
+  <data name="Main_Photos_Folders_Menu_Item_OpenFolder">
+    <value>_Klasörü aç</value>
+    <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="Main_Photos_Folders_Menu_Item_Remove">
-    <value>remove</value>
+    <value>_Kaldır</value>
+    <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
+  </data>
+  <data name="Main_Photos_Folders_Menu_Item_Retry">
+    <value>_Yeniden dene</value>
+    <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="Main_Photos_Folders_NoItemsFound_Label">
-    <value>No photos/videos found</value>
+    <value>Herhangi bir fotoğraf/video bulunamadı</value>
+  </data>
+  <data name="Main_Photos_Folders_WaitingToImport">
+    <value>İçe aktarılması bekleniyor...</value>
   </data>
   <data name="Main_Photos_ImportFromGoogle_Export_Description">
-    <value>Step-by-step guide of how to export your Google Photos</value>
+    <value>Google Fotoğraflarınızı nasıl dışa aktaracağınızı anlatan adım adım rehber</value>
   </data>
   <data name="Main_Photos_ImportFromGoogle_Export_Title">
-    <value>1. Export your Google Photos</value>
+    <value>1. Google Fotoğraflarınızı dışa aktarın</value>
   </data>
   <data name="Main_Photos_ImportFromGoogle_Import_Description">
-    <value>It must be the unzipped folder containing your exported photos and videos.</value>
+    <value>Dışa aktarılan fotoğraflarınızın ve videolarınızın bulunduğu sıkıştırılmamış bir klasör olmalıdır.</value>
   </data>
   <data name="Main_Photos_ImportFromGoogle_Import_Title">
-    <value>2. Import Google Photos folder</value>
+    <value>2. Google Fotoğraflar klasörünü içe aktarın</value>
   </data>
   <data name="Main_Photos_ImportFromGoogle_SelectFolder_Button">
-    <value>Select Folder</value>
+    <value>Klasör seçin</value>
   </data>
   <data name="Main_Photos_ImportFromGoogle_Title">
-    <value>Import from Google Photos</value>
+    <value>Google Fotoğraflardan içe aktarın</value>
   </data>
   <data name="Main_Photos_Import_HowImportWorks_Label">
-    <value>How does photo import work?</value>
+    <value>Fotoğraflar içe nasıl aktarılır?</value>
   </data>
   <data name="Main_Photos_Import_ImportFolder_Description">
-    <value>Import a local folder from your computer</value>
+    <value>Bilgisayarınızdaki bir yerel klasörü içe aktarın</value>
   </data>
   <data name="Main_Photos_Import_ImportFolder_Title">
-    <value>Import a folder</value>
+    <value>Bir klasörü içe aktarın</value>
   </data>
   <data name="Main_Photos_Import_ImportFromGoogle_Description">
-    <value>Import Google photos from Google Takeout</value>
+    <value>Google Takeout üzerinden Google fotoğraflarını içe aktarın</value>
   </data>
   <data name="Main_Photos_Import_ImportFromGoogle_Title">
-    <value>Import from Google Photos</value>
+    <value>Google Fotoğraflardan içe aktarın</value>
   </data>
   <data name="Main_Photos_Import_Title">
-    <value>Import photos</value>
+    <value>Fotoğrafları içe aktarın</value>
   </data>
   <data name="Main_Photos_Title">
     <value>Fotoğraflar</value>
+  </data>
+  <data name="Main_Photos_Warning_UploadUnavailable">
+    <value>Fotoğraf yükleme geçici olarak kullanılamıyor</value>
   </data>
   <data name="Main_Settings_AccountRootFolder_Button_Change">
     <value>_Değiştir</value>
@@ -1145,6 +1169,9 @@ Dosyaların içeriği yalnızca istek yapıldığında indirilir.</value>
   <data name="Main_Sidebar_NavigationMenu_Item_Photos">
     <value>Fotoğraflar</value>
   </data>
+  <data name="Main_Sidebar_NavigationMenu_Item_PhotosImport">
+    <value>Fotoğrafları içe aktarma</value>
+  </data>
   <data name="Main_Sidebar_NavigationMenu_Item_Photos_HelpText">
     <value>Menü ögesi: Fotoğraflar</value>
   </data>
@@ -1263,20 +1290,26 @@ Dosyaların içeriği yalnızca istek yapıldığında indirilir.</value>
   <data name="MappingErrorCode_Value_None">
     <value></value>
   </data>
+  <data name="MappingErrorCode_Value_OnDemandSyncRootMissingSyncRootFlag">
+    <value>Eşitleme klasörü geçersiz. Yeni bir eşitleme klasörü ayarlayın.</value>
+  </data>
   <data name="MappingErrorCode_Value_OnDemandSyncRootNotRegistered">
     <value>Eşitleme klasörünün kaydı beklenmedik bir şekilde kaldırıldı. Yeni bir eşitleme klasörü ayarlayın.</value>
   </data>
+  <data name="MappingErrorCode_Value_PhotoImportFailed">
+    <value>Fotoğraf içe aktarılamadı</value>
+  </data>
   <data name="MappingErrorCode_Value_PhotosDisabled">
-    <value>Proton Photos unavailable</value>
+    <value>Proton Fotoğraflar kullanılamıyor</value>
   </data>
   <data name="MappingErrorCode_Value_PhotosNotReady">
-    <value>Photos feature not ready</value>
+    <value>Fotoğraflar özelliği hazır değil</value>
   </data>
   <data name="MappingErrorCode_Value_RemoteSharedWithMeItemDoesNotExist">
-    <value>Can’t access shared Proton Drive file or folder. Check if it is still shared with you.</value>
+    <value>Paylaşılan Proton Drive dosyasına veya klasörüne erişilemiyor. Hala sizinle paylaşılıyor mu denetleyin.</value>
   </data>
   <data name="MappingErrorCode_Value_RemoteSharedWithMeItemPermissionsDiverged">
-    <value>Permissions of shared Proton Drive file or folder have changed. Toggle its sync off and on again to resolve.</value>
+    <value>Paylaşılan Proton Drive dosyasının veya klasörünün izinleri değişmiş. Sorunu çözmek için eşitlemeyi kapatıp yeniden açın.</value>
   </data>
   <data name="MappingErrorCode_Value_SharingDisabled">
     <value>Paylaşım geçici olarak kullanılamıyor</value>
@@ -1361,6 +1394,27 @@ Dosyaların içeriği yalnızca istek yapıldığında indirilir.</value>
   </data>
   <data name="Onboarding_UpgradeStorage_Title">
     <value>Daha fazla depolama alanı edinin</value>
+  </data>
+  <data name="PhotoImportFolderStatus_Value_Failed">
+    <value>İçe aktarılamadı</value>
+  </data>
+  <data name="PhotoImportFolderStatus_Value_Importing">
+    <value></value>
+  </data>
+  <data name="PhotoImportFolderStatus_Value_Interrupted">
+    <value>İçe aktarım kesintiye uğradı</value>
+  </data>
+  <data name="PhotoImportFolderStatus_Value_NotStarted">
+    <value></value>
+  </data>
+  <data name="PhotoImportFolderStatus_Value_SetupFailed">
+    <value></value>
+  </data>
+  <data name="PhotoImportFolderStatus_Value_Succeeded">
+    <value>İçe aktarım tamamlandı</value>
+  </data>
+  <data name="PhotoImportFolderStatus_Value_ValidationFailed">
+    <value></value>
   </data>
   <data name="ReleaseNoteType_Value_Feature">
     <value>Yeni özellikler</value>
